package animals.bear;

import java.io.File;

import animals.Animal;

public abstract class Bear extends Animal {
    public abstract File showPicture();
}
