package animals.crocodile;

import java.io.File;

import animals.Animal;

public abstract class Crocodile extends Animal {
    public abstract File showPicture();
}
