package animals.eagle;

import java.io.File;

import animals.Animal;

public abstract class Eagle extends Animal {
    @Override
    public abstract File showPicture();
}
