package animals.fox;
import java.io.File;

import animals.Animal;

public abstract class Fox extends Animal {
    public abstract File showPicture();
}
