package animals.lion;

import java.io.File;

import animals.Animal;

public abstract class Lion extends Animal {
    public abstract File showPicture();
}
